style.css
@font-face {
  font-family: "Hack";
  src: url("ttf/Hack-Regular.ttf") format("truetype");
}

html {
  height: 100%;
  width: 100%;
  margin: 0;
}

body {
  height: 100%;
  width: 100%;
  background-color: black;
  overflow-x: hidden;
}

::selection {
  color: black;
  background: white;
}

* {
  font-family: "Hack", monospace;
  color: white;
  margin: 0;
  padding: 0;
}

.link {
  text-decoration: underline;
  cursor: pointer;
}

#contextmenu {
  display: none;
  position: absolute;
  flex-direction: column;
}

#contextmenu > button {
  background-color: #000000;
  color: white;
  font-size: 1rem;
  border: thin solid white;
  padding: 3px 16px;
  width: 100%;
}

#terminal {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  padding: 15px;
  box-sizing: border-box;
  cursor: text;
}

#terminal > #text {
  word-break: break-all;
}

#terminal > #text > #caret {
  background-color: transparent;
}

#terminal > #inputTextarea {
  resize: none;
  overflow: hidden;
  font-size: 1rem;
  height: 0;
  width: 0;
  background-color: transparent;
  border: none;
  outline: none;
}

::-webkit-scrollbar {
  width: 3vmin;
}

::-webkit-scrollbar-track {
  background: #242424;
}

::-webkit-scrollbar-thumb {
  background: white;
}

